<resources>
    <string name="app_name">Retro Market</string>
    <string name="open_menu">Ouvrir le menu latéral</string>
    <string name="close_menu">Fermer le menu latéral</string>
    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
    <string name="image_du_produit">Image du produit</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
    <string name="cart">cart</string>
    <string name="home">home</string>
    <string name="accueil">Accueil</string>
    <string name="panier">Panier</string>
    <string name="menu">Menu</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="pas_encore_inscrit_creer_un_compte">Pas encore inscrit ? Créer un compte</string>
    <string name="repetez_le_mot_de_passe">Répétez le mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="d_j_un_compte_se_connecter">Déjà un compte ? Se connecter</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="username">Username</string>
    <string name="tous_les_champs_sont_obligatoires">Tous les champs sont obligatoires</string>
    <string name="genre">Genre</string>
    <string name="confirmation_message">Un lien de confirmation est envoyé sur votre adresse courriel d\'inscription. Suivez ce lien pour activer votre compte.</string>
    <string name="vider_le_panier">Vider le panier</string>
    <string name="commander">Commander</string>
</resources>